--- a/app/views/courses/1/_course_policy.html.erb
+++ b/app/views/courses/1/_course_policy.html.erb
@@ -81,7 +81,7 @@
       <dt>2．三位一体的教学模式</dt>
       <dd>将实际的商业项目转化成适合教学的项目，实施“课堂、实训室、公司”三位一体教学模式改革，深化校企合作，能够真正的让学生在工作中学习，在学习中工作，促进学生就业“零适应期”。</dd>
       <dt>3．多元化的课程考核</dt>
-      <dd>高职教育的考核应坚持以职业岗位能力为重点，知识、技能并重，以能力和技能考核为主线的原则，摒弃那种只考查学生生搬硬套的考核方式。考试在教学活动中具有显示功能、反馈功能和导向功能，因此要建立以能力培养为主线的课程体系，必须建立考核形式与教学内容、能力培养相适应的高职教育课程考核模式。《iOS图形界面开发》课程的考核重点是学生的平时表现，实训过程等环节，激励学生将功夫用在平时，而不是期末突击，这也有利于学风建设。</dd>
+      <dd>高职教育的考核应坚持以职业岗位能力为重点，知识、技能并重，以能力和技能考核为主线的原则，摒弃那种只考查学生生搬硬套的考核方式。测试在教学活动中具有显示功能、反馈功能和导向功能，因此要建立以能力培养为主线的课程体系，必须建立考核形式与教学内容、能力培养相适应的高职教育课程考核模式。《iOS图形界面开发》课程的考核重点是学生的平时表现，实训过程等环节，激励学生将功夫用在平时，而不是期末突击，这也有利于学风建设。</dd>
     </div>
 
     <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 2．三位一体的教学模式本课程的创新点</p>
