--- a/app/views/exams/show_test.html.erb
+++ b/app/views/exams/show_test.html.erb
@@ -41,7 +41,7 @@
       <div>答案解析：参考第四课时</div>
     </div>
     <div class="center-block" align="center">
-      <%= link_to "考试中心", exams_path, class: "btn btn-primary btn-lg"%>
+      <%= link_to "测试中心", exams_path, class: "btn btn-primary btn-lg"%>
     </div>
   </div>
 
