--- a/app/views/papers/_user_paper.html.erb
+++ b/app/views/papers/_user_paper.html.erb
@@ -8,7 +8,7 @@
       <th>班级</th>
       <th>学号</th>
       <th>姓名</th>
-      <th>考试状态</th>
+      <th>测试状态</th>
       <th>阅卷状态</th>
       <th>客观题得分</th>
       <th>得分</th>
