--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="main-content">
   <section class="common-title">
-    <span class="pull-left">考试中心</span>
+    <span class="pull-left">测试中心</span>
   </section>
 
   <ul id="examListMenu" class="nav nav-pills discuss-menu">
@@ -10,7 +10,7 @@
     <% if teacher_signed_in? %>
       <li class="navbar-right create-discuss">
         <%= link_to new_paper_path do %>
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新建考试
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新建测试
         <% end %>
       </li>
     <% end %>
@@ -19,11 +19,11 @@
   <div class="exams-list">
     <table class="table table-bordered">
       <tr>
-        <th>考试科目</th>
-        <th>考试标题</th>
-        <th>考试内容</th>
-        <th>考试时间</th>
-        <th>考试人数</th>
+        <th>测试科目</th>
+        <th>测试标题</th>
+        <th>测试内容</th>
+        <th>测试时间</th>
+        <th>测试人数</th>
         <% if teacher_signed_in? || (user_signed_in? && params[:type].present?) %>
           <th>操作</th>
         <% end %>
@@ -43,10 +43,10 @@
             <%= link_to("编辑", edit_paper_path(paper)) %> | 
             <%= link_to("试卷", questions_paper_path(paper)) %> |
             <%= link_to("考生", students_paper_path(paper)) %> | 
-            <%= link_to("删除", paper_path(paper), method: :delete, data: { confirm: "确认删除该考试？" } ) %>
+            <%= link_to("删除", paper_path(paper), method: :delete, data: { confirm: "确认删除该测试？" } ) %>
           <% elsif user_signed_in? %>
             <% if params[:type] == 'ing' %>
-              <%= link_to("进入考试", new_paper_answer_path(paper)) %>
+              <%= link_to("进入测试", new_paper_answer_path(paper)) %>
             <% elsif params[:type] == 'end'%>
               <%= link_to("成绩查询", detail_paper_user_papers_path(paper)) %>
             <% end %>
