--- a/app/views/papers/students.html.erb
+++ b/app/views/papers/students.html.erb
@@ -5,7 +5,7 @@
   
   <div class="exams-list container">
     <div class="row header">
-      <div class="col-sm-12"><h4>以下为参加考试的班级<%= link_to "添加考试班级", new_paper_user_paper_path(@paper), remote: true, format: :js, class: "btn btn-info pull-right " %></h4></div>
+      <div class="col-sm-12"><h4>以下为参加测试的班级<%= link_to "添加测试班级", new_paper_user_paper_path(@paper), remote: true, format: :js, class: "btn btn-info pull-right " %></h4></div>
     </div>
     <table class="table table-bordered table-hover students-list">
       <thead>
