--- a/app/views/user/score_search.html.erb
+++ b/app/views/user/score_search.html.erb
@@ -16,7 +16,7 @@
 	  <div class="row self-main-context">
 
 	    <ul class="nav nav-pills show-content">
-        <li role="presentation" class="active"><%= link_to "已完成的考试","#" %></li>
+        <li role="presentation" class="active"><%= link_to "已完成的测试","#" %></li>
       </ul>
 
       <div class="div-content scoure-search">
