--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,6 +1,6 @@
 <div class="main-content">
   <section class="common-title">
-    <span class="pull-left">考试中心</span>
+    <span class="pull-left">测试中心</span>
   </section>
 
   <ul id="examListMenu" class="nav nav-pills discuss-menu">
@@ -8,7 +8,7 @@
     <li><%= link_to("正在进行", "javascript:void(0);") %></li>
     <li><%= link_to("已结束", "javascript:void(0);") %></li>
    <!--  <li class="navbar-right create-discuss">
-      <a id="newCreateBtn" href="javascript:void(0);"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新建考试</a>
+      <a id="newCreateBtn" href="javascript:void(0);"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新建测试</a>
     </li> -->
   </ul>
   <br>
@@ -17,17 +17,17 @@
       <tr>
         <th>系别</th>
         <th>专业</th>
-        <th>考试科目</th>
-        <th>考试内容</th>
-        <th>考试时间</th>
-        <th>考试人数</th>
+        <th>测试科目</th>
+        <th>测试内容</th>
+        <th>测试时间</th>
+        <th>测试人数</th>
         <!-- <th>编辑</th> -->
       </tr>
       <tr>
         <td>计算机信息系</td>
         <td>计算机科学与技术</td>
-        <td>计算机信息技术期末考试</td>
-        <td>计算机信息技术期末考试考试内容</td>
+        <td>计算机信息技术期末测试</td>
+        <td>计算机信息技术期末测试内容</td>
         <td>2015-07-18至2015-07-22</td>
         <td align="center">40</td>
         <!-- <td align="center">
@@ -37,8 +37,8 @@
       <tr>
         <td>计算机信息系</td>
         <td>计算机科学与技术</td>
-        <td>IOS期末考试</td>
-        <td>IOS期末考试内容IOS期末考试内容IOS期末考试内容</td>
+        <td>IOS期末测试</td>
+        <td>IOS期末测试内容IOS期末测试内容IOS期末测试内容</td>
         <td>2015-07-28至2015-07-30</td>
         <td align="center">40</td>
         <!-- <td align="center">
@@ -53,17 +53,17 @@
       <tr>
         <th>系别</th>
         <th>专业</th>
-        <th>考试科目</th>
-        <th>考试内容</th>
-        <th>考试时间</th>
-        <th>考试人数</th>
-        <th>进入考试</th>
+        <th>测试科目</th>
+        <th>测试内容</th>
+        <th>测试时间</th>
+        <th>测试人数</th>
+        <th>进入测试</th>
       </tr>
       <tr>
         <td>计算机信息系</td>
         <td>计算机科学与技术</td>
-        <td>JAVA语言基础期末考试</td>
-        <td>JAVA语言基础期末考试</td>
+        <td>JAVA语言基础期末测试</td>
+        <td>JAVA语言基础期末测试</td>
         <td>2015-07-08至2015-07-10</td>
         <td align="center">20/40</td>
         <td align="center">
@@ -78,18 +78,18 @@
       <tr>
         <th>系别</th>
         <th>专业</th>
-        <th>考试科目</th>
-        <th>考试内容</th>
-        <th>考试时间</th>
-        <th>考试人数</th>
+        <th>测试科目</th>
+        <th>测试内容</th>
+        <th>测试时间</th>
+        <th>测试人数</th>
         <th>查看试卷</th>
       </tr>
       <% (1..10).each do |i| %>
       <tr>
         <td>计算机信息系</td>
         <td>计算机科学与技术</td>
-        <td>计算机组成原理期末考试</td>
-        <td>计算机组成原理期末考试内容</td>
+        <td>计算机组成原理期末测试</td>
+        <td>计算机组成原理期末测试内容</td>
         <td>2015-06-17至2015-06-22</td>
         <td>40/40</td>
         <td align="center">
@@ -107,12 +107,12 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title">新建考试</h4>
+      <h4 class="modal-title">新建测试</h4>
     </div>
     <div class="modal-body">
       <form class="form-horizontal">
         <div class="form-group">
-          <label class="col-sm-3 control-label">考试科目</label>
+          <label class="col-sm-3 control-label">测试科目</label>
           <div class="col-sm-8">
             <input type="text" class="form-control">
           </div>
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label">考试班级</label>
+          <label class="col-sm-3 control-label">测试班级</label>
           <div class="col-sm-8">
             <select class="form-control">
               <option></option>
@@ -144,19 +144,19 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label">考试开始时间</label>
+          <label class="col-sm-3 control-label">测试开始时间</label>
           <div class="col-sm-8">
             <input type="text" class="form-control">
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label">考试结束时间</label>
+          <label class="col-sm-3 control-label">测试结束时间</label>
           <div class="col-sm-8">
             <input type="text" class="form-control">
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-3 control-label">考试内容</label>
+          <label class="col-sm-3 control-label">测试内容</label>
           <div class="col-sm-8">
             <textarea class="form-control" rows="5">
               
