--- a/app/views/exams/test_new.html.erb
+++ b/app/views/exams/test_new.html.erb
@@ -10,9 +10,9 @@
       <%= link_to "查看我的试卷", my_exams_user_index_path, class: 'btn center btn-primary'%>
     </div>
   <% elsif @questions.present? %>
-    <a href="javascript:void(0)" class="btn btn-success js-start-answer-question">开始考试</a>
+    <a href="javascript:void(0)" class="btn btn-success js-start-answer-question">开始测试</a>
     <div class="main-title">
-      JAVA语言基础期末考试
+      JAVA语言基础期末测试
     </div>
     <div class="question-content">
       <%= simple_form_for Exam.new, format: :js, remote: true do |f|%>
@@ -65,16 +65,16 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">考试结束</h4>
+        <h4 class="modal-title" id="myModalLabel">测试结束</h4>
       </div>
       <div class="score-bg">
         <div class="modal-body">
           <br>
-          考试辛苦了!<br>
-          &nbsp;&nbsp;&nbsp;&nbsp;感谢你认真的完成了测验，试卷已经提交到教师处，请耐心等待考试结果。
+          测试辛苦了!<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;感谢你认真的完成了测验，试卷已经提交到教师处，请耐心等待测试结果。
           <br><br><br>
           <div  class="modal-btn">
-            <%= link_to('考试中心', exams_path , class: "btn btn-primary  btn-sm") %>
+            <%= link_to('测试中心', exams_path , class: "btn btn-primary  btn-sm") %>
           </div>
         </div>
       </div>
