--- a/app/views/papers/edit.html.erb
+++ b/app/views/papers/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="main-content">
   <section class="common-title">
-    <span class="pull-left">编辑考试</span>
+    <span class="pull-left">编辑测试</span>
   </section>
   
   <div class="exams-list container">
