--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -14,7 +14,7 @@
       <li>
         <%= link_to my_exams_user_index_path do %>
           <i class="glyphicon glyphicon-edit" aria-hidden="true"></i>
-          <span>我的考试</span>
+          <span>我的测试</span>
         <% end %>
       </li>
        <li>
