--- a/app/views/user_papers/_add_grade.html.erb
+++ b/app/views/user_papers/_add_grade.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title">添加考试班级</h4>
+      <h4 class="modal-title">添加测试班级</h4>
     </div>
     <div class="modal-body">
       <%= form_tag paper_user_papers_path(@paper), class: "form-horizontal" do |f| %>
