--- a/app/views/admin/managers/_form.html.erb
+++ b/app/views/admin/managers/_form.html.erb
@@ -23,6 +23,7 @@
 		<%= f.label :password, '密 码', class: 'col-sm-2 control-label' %>
 		<div class="col-sm-4">
 			<%= f.password_field :password, class: 'form-control' %>
+			<%= f.error :password, id: 'password_error' %>
 		</div>
 	</div>
 	<div class="form-group">
