--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
 
     <div class="col-md-10">
       <div class="row common-info">
-        <%= render :partial => "/user/base_info" %>
+        <%= render :partial => "/user/base_info", locals: {numbers: @numbers} %>
       </div>
 
       <div class="row self-main-context">
@@ -20,7 +20,7 @@
           </li>
         </ul>
 
-         <div class="container div-form div-content">
+        <div class="container div-form div-content">
           <%= simple_form_for current_user, url: registration_path(:user), html: { class: 'form-horizontal', method: :put}, wrapper: :horizontal_form do |f|%>
             <%= f.input :current_password, label: "原始密码", placeholder: '请输入原始密码', autofocus: false %>
             <%= f.input :password, label: "新密码", placeholder: '请输入新密码', autofocus: false %>
@@ -32,11 +32,9 @@
             </p>
             </div>
           <% end %>
-          </div>
+        </div>
+      </div>
     </div>
-
-    </div>
-
   </div>
 
   <%= content_for :script do %>
