--- a/app/views/user/_nav_left.html.erb
+++ b/app/views/user/_nav_left.html.erb
@@ -61,7 +61,7 @@
       $("#left-bar .list li").eq(3).find("a").addClass("active");
       $("#left-bar .list li").eq(3).siblings().find("a").removeClass("active");
     }
-    else if("<%= controller.controller_path %>" == "user" && ("<%= controller.action_name%>" == "show" || "<%= controller.action_name%>" == "edit" || "<%= controller.action_name%>" == "update" )){
+    else if(("<%= controller.controller_path %>" == "user" && "<%= controller.action_name%>" == "show") || ("<%= controller.controller_path %>" == "users" && ("<%= controller.action_name%>" == "edit" || "<%= controller.action_name%>" == "update" ))){
       $("#left-bar .list .list-bg-user").css("top", "324px");
       $("#left-bar .list li").eq(4).find("a").addClass("active");
       $("#left-bar .list li").eq(4).siblings().find("a").removeClass("active");
