--- a/app/views/exams/test_new.html.erb
+++ b/app/views/exams/test_new.html.erb
@@ -74,7 +74,7 @@
           &nbsp;&nbsp;&nbsp;&nbsp;感谢你认真的完成了测验，试卷已经提交到教师处，请耐心等待测试结果。
           <br><br><br>
           <div  class="modal-btn">
-            <%= link_to('测试中心', exams_path , class: "btn btn-primary  btn-sm") %>
+            <%= link_to('考试中心', exams_path , class: "btn btn-primary  btn-sm") %>
           </div>
         </div>
       </div>
