--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -1,6 +1,6 @@
 <div class="main-content">
   <section class="common-title">
-    <span class="pull-left">测试中心</span>
+    <span class="pull-left">考试中心</span>
   </section>
 
   <ul id="examListMenu" class="nav nav-pills discuss-menu">
