--- a/app/views/teachers/import_question.html.erb
+++ b/app/views/teachers/import_question.html.erb
@@ -27,10 +27,10 @@
 			  <div class="form-group">
 			    <div class="col-sm-12">
 			      <div class="col-sm-4">
-			        <%= file_field_tag :file, class: 'form-control' %>
+			        <%= file_field_tag :file, class: 'form-control', id: 'file' %>
 			      </div>
 			      <div class="col-sm-2">
-			        <button class="btn btn-primary" type="submit">
+			        <button class="btn btn-primary excel-btn" type="submit">
 			          <span class="glyphicon glyphicon-floppy-open">导入EXCEL试题</span>
 			        </button>
 			      </div>
@@ -40,3 +40,11 @@
   	</div>
   </div>
 </div>
+<script type="text/javascript">
+  $(".excel-btn").click(function(){
+    if($("#file").val()==""){
+      alert("请先选择所需上传的文件！");
+      return false;
+    }
+  });
+</script>
