--- a/app/views/courses/4/_course_effect.html.erb
+++ b/app/views/courses/4/_course_effect.html.erb
@@ -1,6 +1,6 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-effect-nav"><strong>社会认可度</strong></a>
-<a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>各界评价</strong></a>
-<a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>成果展示</strong></a><br><br>
+<a href="javascript:void(0)" class="btn btn-default btn-primary by-btn-bg course-content-effect-nav"><strong>社会认可度</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-effect-nav"><strong>各界评价</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-effect-nav"><strong>成果展示</strong></a><br><br>
 
   
 <div class=" course-content-effect-div">
@@ -73,53 +73,58 @@
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display1.png")%><br><br>
-    上海大众汽车集团
+    各类汽车类市级技能大赛团体获奖奖杯
     </div>
     <div class="col-sm-6">
       <%= image_tag("course_4/display2.png")%><br><br>
-    上海宝尊马汽车服务有限公司
+    2011年10月上海市“景格杯”高职院校维修高级工技能大赛“团体三等奖”。<br>
+曹心祥 同学荣获个人“二等奖”；黄涛同学荣获个人“三等奖”。
     </div>
   </div> <br><br>
   <div class="row text-center">
     <div class="col-md-6">
       <%= image_tag("course_4/display3.png")%><br><br>
-      深圳风向标电动教学投资有限股份公司
+      2012年4月全国职业院校汽车营销技能<br>
+大赛中我系获得“团体三等奖”
     </div>
     <div class="col-md-6">
       <%= image_tag("course_4/display4.png")%><br><br>
-      上海幼狮高级轿车修理有限公司
+      2012年10月上海市高职院校汽车类专业（汽车维修）职业技能竞赛<br>
+我院荣获“团体三等奖”
     </div>
   </div> <br><br>
 
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display5.png")%> <br><br>
-      南京理工电动师资培训联盟
+      2010年08级学生参加上海嘉定区第五届职业技能大赛汽车维修高级，<br>
+陈益峰同学荣获个人“二等奖”并晋升汽车维修技师，
     </div>
     <div class="col-sm-6">
         <%= image_tag("course_4/display6.png")%><br><br>
-      上海中科力帆电动汽车有限公司
+      2012年嘉定区第七届技能大赛落幕，陈丛强同学荣获个人“三等奖”。<br>
+
       </div>
   </div>
 
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display7.png")%> <br><br>
-      南京理工电动师资培训联盟
+      2015年上海嘉定区第九届职业技能大赛<br>汽车修理工项目 丁佳乾获个人三等奖
     </div>
     <div class="col-sm-6">
         <%= image_tag("course_4/display8.png")%><br><br>
-      上海中科力帆电动汽车有限公司
+      2012年上海高职院校技能竞赛活动第二届汽车类专<br>业技能竞赛（决赛）王姚成荣获优秀指导教师奖
       </div>
   </div>
   <div class="row text-center">
     <div class="col-sm-6">
       <%= image_tag("course_4/display9.png")%> <br><br>
-      南京理工电动师资培训联盟
+      2015年上海嘉定区第五届职业技能大赛汽车修理工项目<br> 丁佳乾获个人奖三等奖
     </div>
     <div class="col-sm-6">
         <%= image_tag("course_4/display10.png")%><br><br>
-      上海中科力帆电动汽车有限公司
+      2012年上海嘉定区第六届职业技能大赛<br>汽车修理工项目 丁佳乾获个人奖二等奖
       </div>
   </div>
 </div>
