--- a/app/views/courses/4/_course_setup.html.erb
+++ b/app/views/courses/4/_course_setup.html.erb
@@ -1,8 +1,8 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-condition-nav"><strong>课程设置</strong></a>
-<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>课程性质与作用</strong></a>
-<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>多种教学方法的运用</strong></a>
-<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>网络教学资源和硬件环境</strong></a>
-<a href="javascript:void(0)" class="btn course-content-condition-nav"><strong>教学模式的设计与创新</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary btn-default by-btn-bg course-content-condition-nav"><strong>课程设置</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-condition-nav"><strong>课程性质与作用</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-condition-nav"><strong>多种教学方法的运用</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-condition-nav"><strong>网络教学资源和硬件环境</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-condition-nav"><strong>教学模式的设计与创新</strong></a>
 <br><br>
 <!-- 课程设置 -->
 <div class="container-fluid course-content-condition-div">
