--- a/app/views/courses/4/_main.html.erb
+++ b/app/views/courses/4/_main.html.erb
@@ -1,7 +1,34 @@
+<div class="related-download">
+  <div class="text-content">
+    <a href="javascript:void(0)" class="mybtn btn btn-primary by-btn-bg"><strong>相关下载</strong></a>
+    <ul class="container-fluid">
+      <li class="col-sm-12 my-title"><strong>教学视频</strong></li>
+      <li class="col-sm-12">
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">电动汽车结构与维修（理实一体）主讲教师视频及教学视频</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+      </li>
+      <li class="col-sm-12 my-title"><strong>课程设计</strong></li>
+      <li class="col-sm-12">
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">电动汽车结构与维修课程整体设计</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+      </li>
+      <li class="col-sm-12 my-title"><strong>课程标准</strong></li>
+      <li class="col-sm-12">
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《电动汽车结构与维修》课程标准</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+      </li>
+      <li class="col-sm-12">
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf mydata">《电动汽车结构与维修》课程实践教学标准</a>
+        <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+      </li>
+    </ul> 
+  </div>
+</div>
+
 <div class="category-list" id="category-list">
-  <a href="javascript:void(0)" class="index  public-active-style active  public-common-style">首页</a>
+  <a href="javascript:void(0)" class="index  public-active-style active  public-common-style">特色与创新</a>
   <a href="javascript:void(0)" class="material public-common-style">申报材料</a>
-  <a href="javascript:void(0)" class="setup public-common-style">课程设置</a>
+  <a href="javascript:void(0)" class="setup public-common-style">课程建设</a>
   <a href="javascript:void(0)" class="team public-common-style">教学队伍</a>
   <a href="javascript:void(0)" class="condition public-common-style">校企合作</a>
   <a href="javascript:void(0)" class="method public-common-style">工学结合</a>
