--- a/app/views/courses/4/_platform.html.erb
+++ b/app/views/courses/4/_platform.html.erb
@@ -4,95 +4,95 @@
 
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>平台互动</strong></a>
 <ul class="container-fluid">
-  <li class="col-sm-12"><strong>毕业综合训练报告</strong></li>
+  <li class="col-sm-12 my-title"><strong>毕业综合训练报告</strong></li>
   <li class="col-sm-12">
     <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">XXXX级学生毕业综合训练的实施意见</a>
-    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 text-center view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">毕业报告样本</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">毕业论文成绩评定表</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">毕业设计论文课题汇总表</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">毕业综合训练报告－封面</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学生毕业实习成绩评定表</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
    <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学生毕业实习手册</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  <li class="col-md-12"><strong>顶岗实习总结</strong></li>
+  <li class="col-md-12 my-title"><strong>顶岗实习总结</strong></li>
    <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">电动汽车实习周记参考</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  <li class="col-md-12"><strong>毕业综合训练报告</strong></li>
+  <li class="col-md-12 my-title"><strong>毕业综合训练报告</strong></li>
 
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">全国汽车维修工中级（汇总题库）</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
    <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（查找隐患1）</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（答案）</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（基本操作2）</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（五部分识别判定）</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学习情境1电工电力安全常识（五部分识别判定1）</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  <li class="col-md-12"><strong>企业调研报告</strong></li>
+  <li class="col-md-12 my-title"><strong>企业调研报告</strong></li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">企业调研报告</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  <li class="col-md-12"><strong>学生毕业实习手册</strong></li>
+  <li class="col-md-12 my-title"><strong>学生毕业实习手册</strong></li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">学生毕业实习手册</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
   </li>
-  <li class="col-md-12"><strong>职业资格认证培训应知应会题</strong></li>
+  <li class="col-md-12 my-title"><strong>职业资格认证培训应知应会题</strong></li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">2015关于转发机动车维修考试最新(1)</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">初级汽车修理工知识试题库</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">高级工汽车维修试题</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">理论知识题库11新三级</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">全国汽车维修工中级（汇总题库）</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2 text-center"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;测试</a>
   </li>
 </ul>
