--- a/app/views/courses/4/_teamwork.html.erb
+++ b/app/views/courses/4/_teamwork.html.erb
@@ -1,6 +1,6 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>校企合作单位</strong></a>
-<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>校内实训介绍</strong></a>
-<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>校外实训介绍</strong></a><br><br>
+<a href="javascript:void(0)" class="btn btn-default btn-primary by-btn-bg course-content-policy-nav"><strong>校企合作单位</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-policy-nav"><strong>校内实训介绍</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-policy-nav"><strong>校外实训介绍</strong></a><br><br>
 
   
 <div class="course-content-policy-div">
