--- a/app/views/courses/4/_combine.html.erb
+++ b/app/views/courses/4/_combine.html.erb
@@ -1,5 +1,5 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-method-nav"><strong>课程实践教学标准</strong></a>
-<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>实训项目</strong></a><br><br>
+<a href="javascript:void(0)" class="btn btn-default btn-primary by-btn-bg course-content-method-nav"><strong>课程实践教学标准</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-method-nav"><strong>实训项目</strong></a><br><br>
 
   
 <div class=" course-content-method-div">
