--- a/app/views/courses/4/_course_content.html.erb
+++ b/app/views/courses/4/_course_content.html.erb
@@ -1,6 +1,6 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-nav"><strong>教学内容的具体表现形式</strong></a>
-<a href="javascript:void(0)" class="btn course-content-nav"><strong>教学内容的组织与安排</strong></a>
-<a href="javascript:void(0)" class="btn course-content-nav"><strong>教学内容的授课计划</strong></a>
+<a href="javascript:void(0)" class="btn btn-default btn-primary by-btn-bg course-content-nav"><strong>教学内容的具体表现形式</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-nav"><strong>教学内容的组织与安排</strong></a>
+<a href="javascript:void(0)" class="btn btn-default course-content-nav"><strong>教学内容的授课计划</strong></a>
 <br><br>
 <div class="container-fluid course-content-div">
 	<dl>
